# Craftslogan_AI

./: README.md  pyproject.toml
src/slogan_maker/: crew.py  main.py
src/slogan_maker/config/: agents.yaml  tasks.yaml
src/slogan_maker/oauth/: auth.py
src/slogan_maker/tools/: credentials.json  image_generator.py  linkedin_poster.py  read_email_tool.py  twitter_poster.py
